# pyQRC

./: .gitignore  .travis-install.sh  .travis.yml  LICENSE  MANIFEST.in  README.md  SUPPORT.md  acetaldehyde.com  acetaldehyde_QRC.qrc  claisen_ts_QRCF.com  claisen_ts_QRCF.qrc  claisen_ts_QRCR.com  claisen_ts_QRCR.qrc  pyQRC.py  pyproject.toml  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: pylint.yml  vibe-check.yml
examples/g16/: acetaldehyde.com  claisen_ts.com  planar_chex_mode1.com
examples/orca5/: acetaldehyde.out  claisen_ts.out
examples/orca6/: acetaldehyde.inp  acetaldehyde.out  claisen_ts.inp  claisen_ts.out
examples/qchem/: acetaldehyde.inp  acetaldehyde.out  claisen_ts.inp  claisen_ts.out
irc_comparison/analysis/: README.md  compare_irc_qrc.py  compare_irc_qrc.txt  smiles_mismatches.txt
irc_comparison/irc/: IRC_data.txt  README.md  parse_irc.py
irc_comparison/qrc_0.1/: QRC01_data.txt  README.md  parse_qrc.py
irc_comparison/qrc_0.3/: QRC03_data.txt  README.md
irc_comparison/qrc_0.5/: QRC05_data.txt  README.md
irc_comparison/ts/: README.md  imag_freqs.txt  ts.xyz  xyz_to_gaussian.py
pyqrc/: __init__.py  __main__.py  pyQRC.py  run_g16.sh
pyqrc/examples/: acetaldehyde_QRC.com  claisen_ts.com  planar_chex_mode3.com  planar_chex_mode3.qrc
pyqrc/examples/Gaussian/: acetaldehyde_QRC.com  acetaldehyde_QRC.qrc  claisen_ts_QRCF.com  claisen_ts_QRCF.qrc  planar_chex_mode1.qrc
pyqrc/examples/Orca/: acetaldehyde.out  acetaldehyde_QRC.inp  acetaldehyde_QRC.out  acetaldehyde_QRC.qrc  claisen_ts.out  claisen_ts_QRCF.inp  claisen_ts_QRCF.out  claisen_ts_QRCF.qrc  claisen_ts_QRCR.inp  claisen_ts_QRCR.out  claisen_ts_QRCR.qrc
pyqrc/examples/QChem/: acetaldehyde.inp  acetaldehyde.out  acetaldehyde_QRC.inp  acetaldehyde_QRC.out  acetaldehyde_QRC.qrc
tests/: conftest.py  test_pyqrc.py
