[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyqrc"
version = "2.1.0"
description = "A Python program to project computed structures along normal modes for Quick Reaction Coordinate calculations"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Paton Research Group", email = "patonlab@colostate.edu"},
]
maintainers = [
    {name = "Robert Paton", email = "robert.paton@colostate.edu"},
]
keywords = [
    "computational-chemistry",
    "thermochemistry",
    "gaussian",
    "orca",
    "qchem",
    "imaginary-frequencies",
    "intrinsic-reaction-coordinate",
    "normal-modes",
    "transition-state",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
]
requires-python = ">=3.9"
dependencies = [
    "cclib",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pylint>=3.0",
]

[project.urls]
Homepage = "https://github.com/patonlab/pyQRC"
Repository = "https://github.com/patonlab/pyQRC"
Documentation = "https://github.com/patonlab/pyQRC#readme"
Issues = "https://github.com/patonlab/pyQRC/issues"

[project.scripts]
pyqrc = "pyqrc.pyQRC:main"

[tool.setuptools]
packages = ["pyqrc"]
include-package-data = true

[tool.setuptools.package-data]
pyqrc = ["examples/*"]

[tool.pylint.main]
py-version = "3.9"

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-function-docstring",
    "invalid-name",
    "too-many-arguments",
    "too-many-positional-arguments",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
    "too-many-nested-blocks",
    "too-few-public-methods",
]

[tool.pylint.format]
max-line-length = 120
